# tracker

./: .gitignore
color-finder/: CMakeLists.txt  main.cpp
color-finder/include/: hueMenu.hpp
color-finder/src/: hueMenu.cpp
tests-mariam/: CMakeLists.txt  easter-egg  test  test.cpp
tests-panos/: CMakeLists.txt  test.cpp
